Tidy up str/tl and return values

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -662,13 +662,14 @@
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by \cs{file_path_include:n}.
-%   If found, sets the \meta{str var} to the MD5 sum generated from the
+%   If found, sets the \meta{tl var} to the MD5 sum generated from the
 %   content of the file. The file is read as bytes, which means that in
 %   contrast to most \TeX{} behaviour there will be a difference in result
 %   depending on the line endings used in text files. The same file will
 %   produce the same result between different engines: the algorithm used
 %   is the same in all cases.
-%   Where the file is not found, the \meta{str var} will be empty.
+%   Where the file is not found, the \meta{tl var} will set to
+%   \cs{q_no_value}.
 % \end{function}
 %
 % \begin{function}[noTF, added = 2017-07-09, updated = 2019-02-16]
@@ -678,8 +679,8 @@
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by \cs{file_path_include:n}.
-%   If found, sets the \meta{str var} to the size of the file in bytes.
-%   Where the file is not found, the \meta{str var} will be empty.
+%   If found, sets the \meta{tl var} to the size of the file in bytes.
+%   Where the file is not found, the \meta{tl var} will set to \cs{q_no_value}.
 %   This is not available in older versions of \XeTeX{}.
 % \end{function}
 %
@@ -690,11 +691,12 @@
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by \cs{file_path_include:n}.
-%   If found, sets the \meta{str var} to the modification timestamp of
+%   If found, sets the \meta{tl var} to the modification timestamp of
 %   the file in the form |D:|\meta{year}\meta{month}\meta{day}\meta{hour}^^A
 %   \meta{minute}\meta{second}\meta{offset}, where the latter may be |Z|
 %   (UTC) or \meta{plus-minus}\meta{hours}|'|\meta{minutes}|'|.
-%   Where the file is not found, the \meta{str var} will be empty.
+%   Where the file is not found, the \meta{tl var} will be set to
+%   \cs{q_no_value}.
 %   This is not available in older versions of \XeTeX{}.
 % \end{function}
 %
