--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -522,18 +522,30 @@
 %   \begin{syntax}
 %     \cs{driver_pdf_destination:nn} \Arg{name} \Arg{action}
 %   \end{syntax}
-%   Creates a destination (anchor) called \meta{name} and which will carry
-%   out one of the \meta{actions}
+%   Creates a destination (anchor) called \meta{name}; when a jump is made
+%   by a link to the destination, one of the following actions may take
+%   place
 %   \begin{itemize}
-%     \item \texttt{xyz} Move to the current anchor point
+%     \item \texttt{xyz} Move the view such that the target point is at the
+%       top-left of the viewer screen
 %     \item \texttt{\meta{scale}} As for \texttt{xyz}, but also sets the
-%       view \meta{scale}
-%     \item \texttt{fit} Fit the page in the window
-%     \item \texttt{fitb} Fit the bounding box of the page
-%     \item \texttt{fitbh} Fit the height of the bounding box of the page
-%     \item \texttt{fitbv} Fit the width of the bounding box of the page
-%     \item \texttt{fith} Fit the height of the page
-%     \item \texttt{fitv} Fit the width of the page
+%       viewer \meta{scale}
+%     \item \texttt{fit} Display the page containing the destination and fit
+%       the entire page within the viewer window
+%     \item \texttt{fitb} Display the page containing the destination and fit
+%       the bounding box of the page within the viewer window
+%     \item \texttt{fitbh} Move to the destination page such that the
+%       anchor point is at the top of the viewer screen, and scale
+%       such that the bounding box fills the viewer width
+%     \item \texttt{fitbv} Move to the destination page such that the
+%       anchor point is at the left of the viewer screen, and scale
+%       such that the bounding box fills the viewer height
+%     \item \texttt{fith} Move to the destination page such that the
+%       anchor point is at the top of the viewer screen, and scale
+%       such that the page fills the viewer width
+%     \item \texttt{fitv} Move to the destination page such that the
+%       anchor point is at the left of the viewer screen, and scale
+%       such that the page fills the viewer height
 %   \end{itemize}
 %   A \meta{scale} of zero is equivalent to \texttt{xyz}.
 % \end{function}
