Basic support for /FitR destinations
Works for pdfTeX/LuaTeX/dvips but not yet
(x)dvipdfmx: need an interface for \pdfsavepos.

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -76,6 +76,13 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}{\l_@@_pdf_tmp_box}
+%   For fitting destinations.
+%    \begin{macrocode}
+\box_new:N \l_@@_pdf_tmp_box
+%    \end{macrocode}
+% \end{variable}
+%
 % \subsection{\texttt{dvips} driver}
 %
 %    \begin{macrocode}
@@ -1046,9 +1053,11 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\driver_pdf_destination:nn}
+% \begin{macro}{\driver_pdf_destination:nn, \driver_pdf_destination_rectangle:nn}
+% \begin{macro}{driver.dest.llx, driver.dest.lly}
 %   Here, we need to turn the zoom into a scale. We also need to know where
-%   the current anchor point actually is: worked out in PostScript.
+%   the current anchor point actually is: worked out in PostScript. For the
+%   rectangle version, we have a bit more PostScript: we need two points.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_destination:nn #1#2
   {
@@ -1075,7 +1084,37 @@
         /DEST
       }
   }
+\cs_new_protected:Npn \driver_pdf_destination_rectangle:nn #1#2
+  {
+    \group_begin:
+      \hbox_set:Nn \l_@@_pdf_tmp_box {#2}
+      \box_move_down:nn
+        { \box_dp:N \l_@@_pdf_tmp_box }
+        { \hbox:n { \@@_postscript:n { driver.dest.anchor } } }
+      \box_use:N \l_@@_pdf_tmp_box
+      \@@_postscript:n
+        {
+          SDict /driver.dest.llx ~ driver.dest.x ~ put ~
+          SDict /driver.dest.lly ~ driver.dest.y ~ put
+        }
+      \box_move_up:nn
+        { \box_ht:N \l_@@_pdf_tmp_box }
+        { \hbox:n { \@@_postscript:n { driver.dest.anchor } } }
+      \@@_pdfmark:n
+        {
+          /View
+          [
+            /FitR ~
+              driver.dest.llx ~ driver.dest.lly ~
+              driver.dest.x   ~ driver.dest.y
+          ]
+          /Dest ( #1 ) cvn
+          /DEST
+        }
+    \group_end:    
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \subsubsection{Structure}
@@ -1222,10 +1261,11 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\driver_pdf_destination:nn}
+% \begin{macro}{\driver_pdf_destination:nn, \driver_pdf_destination_rectangle:nn}
 %   A simple task: pass the data to the primitive. The |\scan_stop:| deals
 %   with the danger of an unterminated keyword. The zoom given here is a
-%   percentage, but we need to pass it as \emph{per mille}.
+%   percentage, but we need to pass it as \emph{per mille}. The rectangle
+%   version is also easy as everything is build in.
 %    \begin{macrocode}
 \cs_new_protected:Npx \driver_pdf_destination:nn #1#2
   {
@@ -1245,6 +1285,21 @@
           }
           { xyz ~ zoom \exp_not:N \fp_eval:n { #2 * 10 } }
         \scan_stop:
+  }
+\cs_new_protected:Npx \driver_pdf_destination_rectangle:nn #1#2
+  {
+    \group_begin:
+      \hbox_set:Nn \l_@@_pdf_tmp_box {#2}
+     \cs_if_exist:NTF \tex_pdfextension:D
+      { \exp_not:N \tex_pdfextension:D dest ~ }
+      { \exp_not:N \tex_pdfdest:D }  
+      name {#1}
+      fitr ~
+        width  \exp_not:N \box_wd:N \l_@@_pdf_tmp_box
+        height \exp_not:N \box_ht:N \l_@@_pdf_tmp_box
+        depth  \exp_not:N \box_dp:N \l_@@_pdf_tmp_box 
+      \box_use:N \l_@@_pdf_tmp_box
+    \group_end:    
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1669,7 +1724,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\driver_pdf_destination:nn}
+% \begin{macro}{\driver_pdf_destination:nn, \driver_pdf_destination_rectangle:nn}
 %   Here, we need to turn the zoom into a scale.
 %   A little translation
 %    \begin{macrocode}
@@ -1693,6 +1748,13 @@
             { /XYZ ~ @xpos ~ @ypos ~ \fp_eval:n { (#2) / 100 } }
         ]
       }
+  }
+\cs_new_protected:Npn \driver_pdf_destination_rectangle:nn #1#2
+  {
+    \group_begin:
+      \hbox_set:Nn \l_@@_pdf_tmp_box {#2}
+      \box_use:N \l_@@_pdf_tmp_box
+    \group_end:    
   }
 %    \end{macrocode}
 % \end{macro}
