--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -550,6 +550,16 @@
 %   A \meta{scale} of zero is equivalent to \texttt{xyz}.
 % \end{function}
 %
+% \begin{function}[added = 2019-04-28]{\driver_pdf_destination_rectangle:nn}
+%   \begin{syntax}
+%     \cs{driver_pdf_destination_rectangle:nn} \Arg{name} \Arg{content}
+%   \end{syntax}
+%   Creates a destination (anchor) called \meta{name}; when a jump is made
+%   by a link to the destination, the viewer will set the zoom such that all
+%   of the \meta{content} is visible taking up the full width or height of the
+%   viewer area.
+% \end{function}
+%
 % \subsection{PDF Catalogue entries}
 %
 % \begin{function}[added = 2019-04-25]{\driver_pdf_catalogue_gput:nn}
