Got a function name wrong
\pdfcatalog looks rather more tricky!

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -100,9 +100,9 @@
 %
 % \subsubsection{Catalogue entries}
 %
-% \begin{macro}{\driver_pdf_catalog_gput:nn}
+% \begin{macro}{\driver_pdf_info_gput:nn}
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_pdf_catalog_gput:nn #1#2
+\cs_new_protected:Npn \driver_pdf_info_gput:nn #1#2
   { \@@_pdfmark:n { /#1 ~ #2 /DOCINFO } }
 %    \end{macrocode}
 % \end{macro}
@@ -1306,9 +1306,9 @@
 %
 % \subsubsection{Catalogue entries}
 %
-% \begin{macro}{\driver_pdf_catalog_gput:nn}
+% \begin{macro}{\driver_pdf_info_gput:nn}
 %    \begin{macrocode}
-\cs_new_protected:Npx \driver_pdf_catalog_gput:nn #1#2
+\cs_new_protected:Npx \driver_pdf_info_gput:nn #1#2
   {
     \cs_if_exist:NTF \tex_pdfextension:D
       { \tex_pdfextension:D info }
@@ -1511,9 +1511,9 @@
 %
 % \subsubsection{Catalogue entries}
 %
-% \begin{macro}{\driver_pdf_catalog_gput:nn}
+% \begin{macro}{\driver_pdf_info_gput:nn}
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_pdf_catalog_gput:nn #1#2
+\cs_new_protected:Npn \driver_pdf_info_gput:nn #1#2
   { \@@_pdf:n { docinfo << /#1 ~ #2 >> } }
 %    \end{macrocode}
 % \end{macro}
@@ -1811,10 +1811,10 @@
 %
 % \subsubsection{Catalogue entries}
 %
-% \begin{macro}{\driver_pdf_catalog_gput:nn}
+% \begin{macro}{\driver_pdf_info_gput:nn}
 %   No-op.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_pdf_catalog_gput:nn #1#2 { }
+\cs_new_protected:Npn \driver_pdf_info_gput:nn #1#2 { }
 %    \end{macrocode}
 % \end{macro}
 %
