--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -562,11 +562,11 @@
 %
 % \subsection{PDF Catalogue entries}
 %
-% \begin{function}[added = 2019-04-25]{\driver_pdf_catalogue_gput:nn}
+% \begin{function}[added = 2019-04-28]{\driver_pdf_info_gput:nn}
 %   \begin{syntax}
-%     \cs{driver_pdf_catalogue_gput:nn} \Arg{key} \Arg{value}
+%     \cs{driver_pdf_ifno_gput:nn} \Arg{key} \Arg{value}
 %   \end{syntax}
-%   Adds the key--value pair to the PDF catalogue. The \meta{key} should
+%   Adds the key--value pair to the PDF information. The \meta{key} should
 %   be given \emph{without} the leading |/|. The \meta{value} should be
 %   a \enquote{raw} PDF dictionary entry, including the |(|/|)| pair for
 %   a string or leading |/| for a boolean.
