--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -564,7 +564,7 @@
 %
 % \begin{function}[added = 2019-04-28]{\driver_pdf_info_gput:nn}
 %   \begin{syntax}
-%     \cs{driver_pdf_ifno_gput:nn} \Arg{key} \Arg{value}
+%     \cs{driver_pdf_info_gput:nn} \Arg{key} \Arg{value}
 %   \end{syntax}
 %   Adds the key--value pair to the PDF information. The \meta{key} should
 %   be given \emph{without} the leading |/|. The \meta{value} should be
