--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -127,12 +127,12 @@
   {
     \int_gincr:N \g_@@_pdf_object_int
     \int_const:cn
-      { g_@@_pdf_object_ \tl_to_str:n {#1} _int }
+      { c_@@_pdf_object_ \tl_to_str:n {#1} _int }
       { \g_@@_pdf_object_int }
     \prop_gput:Nnn \g_@@_pdf_object_prop {#1} {#2}
   }
 \cs_new:Npn \driver_pdf_object_ref:n #1
-  { { driver.obj \int_use:c { g_@@_pdf_object_ \tl_to_str:n {#1} _int } } }
+  { { driver.obj \int_use:c { c_@@_pdf_object_ \tl_to_str:n {#1} _int } } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1348,7 +1348,7 @@
         {
           #1 reserveobjnum ~
           \int_const:cn
-            { g_@@_pdf_object_ \exp_not:N \tl_to_str:n {##1} _int }
+            { c_@@_pdf_object_ \exp_not:N \tl_to_str:n {##1} _int }
             {#2}
           \prop_gput:Nnn \exp_not:N \g_@@_pdf_object_prop {##1} {##2}
         }
@@ -1362,7 +1362,7 @@
     { \@@_tmp:w { \tex_pdfobj:D } { \tex_pdflastobj:D } }
 \group_end:
 \cs_new:Npn \driver_pdf_object_ref:n #1
-  { \int_use:c { g_@@_pdf_object_ \tl_to_str:n {#1} _int } ~ 0 ~ R }
+  { \int_use:c { c_@@_pdf_object_ \tl_to_str:n {#1} _int } ~ 0 ~ R }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1379,7 +1379,7 @@
         {
           \tex_immediate:D #1 useobjnum ~
           \int_use:c
-            { g_@@_pdf_object_ \tl_to_str:n {##1} _int }
+            { c_@@_pdf_object_ \tl_to_str:n {##1} _int }
             \str_case_e:nn
               { \prop_item:Nn \g_@@_pdf_object_prop {##1} }
               {
