Missing \exp_not:N

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -1357,7 +1357,7 @@
     {
       \@@_tmp:w
         { \tex_pdfextension:D obj ~ }
-        { \tex_pdffeedback:D lastobj \scan_stop: }
+        { \exp_not:N \tex_pdffeedback:D lastobj \scan_stop: }
     }
     { \@@_tmp:w { \tex_pdfobj:D } { \tex_pdflastobj:D } }
 \group_end:
