--- a/l3kernel/l3drivers-basics.dtx
+++ b/l3kernel/l3drivers-basics.dtx
@@ -148,9 +148,21 @@
 %
 % \begin{macro}{\@@_postscript_header:n}
 %   PostScript for the header: a small saving but makes the code clearer.
+%   This is held until the start of shipout such that a document with no
+%   actual output does not write anything.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_postscript_header:n #1
+\cs_new_protected:Npx \@@_postscript_header:n #1
+%<*initex>
   { \@@_literal:n { ! #1 } }
+%</initex>
+%<*package>
+  {
+    \cs_if_exist:NTF \AtBeginDvi
+      { \exp_not:N \AtBeginDvi }
+      { \use:n }
+        { \@@_literal:n { ! #1 } }
+  }
+%</package>
 %    \end{macrocode}
 % \end{macro}
 %
