Improve \char_<target>_case:N and add str version
This came up after a discussion with Ulrike. The old behaviour was
somewhat loose in terms of the catcode of the tokens produced. In this
commit, that is addressed by ensuring that the output tokens are always
re-generated to have the correct catcode. It also adds a str version,
which will be quite a bit faster and which gives the correct behaviour
in \str_<target>_case:n - that was not the case before.

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1890,7 +1890,7 @@
     \quark_if_recursion_tail_stop_do:Nn #2
       { \@@_change_case_end:wn }
     \@@_change_case_output:fw
-      { \use:c { char_ #1 _case:N } #2 }
+      { \use:c { char_str_ #1 _case:N } #2 }
     \@@_change_case_loop:nw {#1}
   }
 %    \end{macrocode}
