Catcode correction for 8-bit engines

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2435,7 +2435,8 @@
   { \char_generate:nn { `#1 } { \char_value_catcode:n { `#1 } } }
 \bool_lazy_or:nnF { \sys_if_engine_luatex_p: } { \sys_if_engine_xetex_p: }
   {
-    \cs_set_eq:NN \@@_change_case:nN \use_ii:nn
+    \cs_set:Npn \@@_change_case:nN #1#2
+      { \char_generate:nn {#1} { \char_value_catcode:n {#1} } }
   }
 %    \end{macrocode}
 %   Same story for the string version, except category code is easier
@@ -2467,7 +2468,8 @@
   }
 \bool_lazy_or:nnF { \sys_if_engine_luatex_p: } { \sys_if_engine_xetex_p: }
   {
-    \cs_set_eq:NN \@@_str_change_case:nN \use_ii:nn
+    \cs_set:Npn \@@_str_change_case:nN #1#2
+      { \char_generate:nn {#1} { 12 } }
   }
 %    \end{macrocode}
 % \end{macro}
