Missing mark-up

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2341,25 +2341,25 @@
 %<@@=char>
 %    \end{macrocode}
 %
-% \begin{macro}
+% \begin{macro}[EXP]
 %   {
 %     \char_lower_case:N, \char_upper_case:N,
 %     \char_mixed_case:N, \char_fold_case:N
 %   }
-% \begin{macro}{\@@_change_case:nNN}
-% \begin{macro}{\@@_change_case:nN}
-% \begin{macro}{\@@_change_case_multi:n, \@@_change_case_multi:v}
-% \begin{macro}{\@@_change_case_multi:NNNw}
-% \begin{macro}{\@@_change_case:NN}
-% \begin{macro}{\@@_change_case:NNN}
-% \begin{macro}{\@@_change_case:N}
-% \begin{macro}
+% \begin{macro}[EXP]{\@@_change_case:nNN}
+% \begin{macro}[EXP]{\@@_change_case:nN}
+% \begin{macro}[EXP]{\@@_change_case_multi:n, \@@_change_case_multi:v}
+% \begin{macro}[EXP]{\@@_change_case_multi:NNNw}
+% \begin{macro}[EXP]{\@@_change_case:NN}
+% \begin{macro}[EXP]{\@@_change_case:NNN}
+% \begin{macro}[EXP]{\@@_change_case:N}
+% \begin{macro}[EXP]
 %   {
 %     \char_str_lower_case:N, \char_str_upper_case:N,
 %     \char_str_mixed_case:N, \char_str_fold_case:N
 %   }
-% \begin{macro}{\@@_str_change_case:nNN}
-% \begin{macro}{\@@_str_change_case:nN}
+% \begin{macro}[EXP]{\@@_str_change_case:nNN}
+% \begin{macro}[EXP]{\@@_str_change_case:nN}
 %   Expandable character generation is done using a two-part approach.
 %   First, see if the current character has a special mapping for the current
 %   transformation. If it does, insert that. Otherwise, use the \TeX{} data
