--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -151,6 +151,26 @@
 %   \end{texnote}
 % \end{function}
 %
+% \begin{function}[added = 2018-04-06, updated = 2019-05-03, EXP]
+%   {
+%     \char_lower_case:N, \char_upper_case:N,
+%     \char_mixed_case:N, \char_fold_case:N,
+%     \char_str_lower_case:N, \char_str_upper_case:N,
+%     \char_str_mixed_case:N, \char_str_fold_case:N,
+%   }
+%   \begin{syntax}
+%     \cs{char_lower_case:N} \meta{char}
+%   \end{syntax}
+%   Converts the \meta{char} to the equivalent case-changed character
+%   as detailed by the function name (see \cs{str_fold_case:n}
+%   and \cs{tl_mixed_case:n} for details of these terms). The case mapping
+%   is carried out with no context-dependence (\emph{cf.}~\cs{tl_upper_case:n},
+%   \emph{etc.}) The \texttt{str} versions always generate \enquote{other}
+%   (category code $12$) characters, whilst the standard versions generate
+%   characters with the currently-active category code (\emph{i.e.}~as if
+%   the character had been read directly here).
+% \end{function}
+%
 % \begin{variable}[added = 2011-09-05]{\c_catcode_other_space_tl}
 %   Token list containing one character with category code $12$,
 %   (\enquote{other}), and character code $32$ (space).
@@ -1528,6 +1548,148 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{variable}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[EXP]
+%   {
+%     \char_lower_case:N, \char_upper_case:N,
+%     \char_mixed_case:N, \char_fold_case:N
+%   }
+% \begin{macro}[EXP]{\@@_change_case:nNN}
+% \begin{macro}[EXP]{\@@_change_case:nN}
+% \begin{macro}[EXP]{\@@_change_case_multi:n, \@@_change_case_multi:v}
+% \begin{macro}[EXP]{\@@_change_case_multi:NNNw}
+% \begin{macro}[EXP]{\@@_change_case:NN}
+% \begin{macro}[EXP]{\@@_change_case:NNN}
+% \begin{macro}[EXP]{\@@_change_case:N}
+% \begin{macro}[EXP]
+%   {
+%     \char_str_lower_case:N, \char_str_upper_case:N,
+%     \char_str_mixed_case:N, \char_str_fold_case:N
+%   }
+% \begin{macro}[EXP]{\@@_str_change_case:nNN}
+% \begin{macro}[EXP]{\@@_str_change_case:nN}
+%   Expandable character generation is done using a two-part approach.
+%   First, see if the current character has a special mapping for the current
+%   transformation. If it does, insert that. Otherwise, use the \TeX{} data
+%   to look up the one-to-one mapping, and generate the appropriate character
+%   with the appropriate category code. Mixed case needs an extra step as it
+%   may be special-cased or might be a special upper case outcome. The internal
+%   when using non-Unicode engines has to be set up to only do anything
+%   with ASCII characters.
+%
+%  To ensure that the category codes produced are predictable, every character
+%  is re-generated even if it is otherwise unchanged. This makes life a little
+%  interesting when we might have multiple output characters: we have to
+%  grab each of them and case change them in reverse order to maintain
+%  \texttt{f}-type expandability.
+%    \begin{macrocode}
+\cs_new:Npn \char_lower_case:N #1
+  { \@@_change_case:nNN { lower } \char_value_lccode:n #1 }
+\cs_new:Npn \char_upper_case:N #1
+  { \@@_change_case:nNN { upper } \char_value_uccode:n #1 }
+\cs_new:Npn \char_mixed_case:N #1
+  {
+    \tl_if_exist:cTF { c_@@_mixed_case_ \token_to_str:N #1 _tl }
+      {
+        \@@_change_case_multi:v
+          { c_@@_mixed_case_ \token_to_str:N #1 _tl }
+      }
+      { \char_upper_case:N #1 }
+  }
+\cs_new:Npn \char_fold_case:N #1
+  { \@@_change_case:nNN { fold } \char_value_lccode:n #1 }
+\cs_new:Npn \@@_change_case:nNN #1#2#3
+  {
+    \tl_if_exist:cTF { c_@@_ #1 _case_ \token_to_str:N #3 _tl }
+      {
+        \@@_change_case_multi:v
+          { c_@@_ #1 _case_ \token_to_str:N #3 _tl }
+      }
+      { \exp_args:Nf \@@_change_case:nN { #2 { `#3 } } #3 }
+  }
+\cs_new:Npn \@@_change_case:nN #1#2
+  {
+    \int_compare:nNnTF {#1} = 0
+      { \@@_change_case:N #2 }
+      { \char_generate:nn {#1} { \char_value_catcode:n {#1} } }
+  }
+\cs_new:Npn \@@_change_case_multi:n #1
+  { \@@_change_case_multi:NNNw #1 \q_no_value \q_no_value \q_stop }
+\cs_new:Npn \@@_change_case_multi:NNNw #1#2#3#4 \q_stop
+  {
+    \quark_if_no_value:NTF #3
+      {
+        \quark_if_no_value:NTF #2
+          { \@@_change_case:N #1 }
+          { \@@_change_case:NN #1#2 }
+      }
+      { \@@_change_case:NNN #1#2#3 }
+  }
+\cs_generate_variant:Nn \@@_change_case_multi:n { v }
+\cs_new:Npn \@@_change_case:NN #1#2
+  {
+    \exp_args:Nnf \use:nn
+      { \@@_change_case:N #1 }
+      { \@@_change_case:N #2 }
+  }
+\cs_new:Npn \@@_change_case:NNN #1#2#3
+  {
+    \exp_args:Nnff \use:nnn
+      { \@@_change_case:N #1 }
+      { \@@_change_case:N #2 }
+      { \@@_change_case:N #3 }
+  }
+\cs_new:Npn \@@_change_case:N #1
+  { \char_generate:nn { `#1 } { \char_value_catcode:n { `#1 } } }
+\cs_if_exist:NF \tex_Uchar:D
+  {
+    \cs_set_eq:NN \@@_change_case:nN \use_ii:nn
+  }
+%    \end{macrocode}
+%   Same story for the string version, except category code is easier
+%   to follow. This of course makes this version significantly faster.
+%    \begin{macrocode}
+\cs_new:Npn \char_str_lower_case:N #1
+  { \@@_str_change_case:nNN { lower } \char_value_lccode:n #1 }
+\cs_new:Npn \char_str_upper_case:N #1
+  { \@@_str_change_case:nNN { upper } \char_value_uccode:n #1 }
+\cs_new:Npn \char_str_mixed_case:N #1
+  {
+    \tl_if_exist:cTF { c_@@_mixed_case_ \token_to_str:N #1 _tl }
+      { \tl_to_str:c { c_@@_mixed_case_ \token_to_str:N #1 _tl } }
+      { \char_str_upper_case:N #1 }
+  }
+\cs_new:Npn \char_str_fold_case:N #1
+  { \@@_str_change_case:nNN { fold } \char_value_lccode:n #1 }
+\cs_new:Npn \@@_str_change_case:nNN #1#2#3
+  {
+    \tl_if_exist:cTF { c_@@_ #1 _case_ \token_to_str:N #3 _tl }
+      { \tl_to_str:c { c_@@_ #1 _case_ \token_to_str:N #3 _tl } }
+      { \exp_args:Nf \@@_str_change_case:nN { #2 { `#3 } } #3 }
+  }
+\cs_new:Npn \@@_str_change_case:nN #1#2
+  {
+    \int_compare:nNnTF {#1} = 0
+      { \tl_to_str:n {#2} }
+      { \char_generate:nn {#1} { 12 } }
+  }
+\cs_if_exist:NF \tex_Uchar:D
+  {
+    \cs_set:Npn \@@_str_change_case:nN #1#2
+      { \tl_to_str:n {#2} }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
