Better hook for breaking hyperlinks in DVI mode (fixes #570)
This way we only add a special to a column with some content. Hopefully this works reasonably well and is safe.

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -1050,27 +1050,27 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\@startcolumn, \@makecol}
+% \begin{macro}{\@makecol}
 %   Hooks to allow link breaking: something will be needed in format mode
 %   at some stage.
 %    \begin{macrocode}
 %<*package>
-\tl_gput_left:Nn \@startcolumn
-  {
-    \@@_postscript:n
-      {
-        driver.globaldict /driver.brokenlink.rect ~ known
-          { driver.bordertracking.continue }
-        if
-      }
-  }
 \tl_gput_left:Nn \@makecol
   {
-    \vbox_set:Nn \@cclv
+    \box_if_empty:NF \@cclv
       {
-        \vbox_unpack_drop:N \@cclv
-        \@@_postscript:n
-          { driver.bordertracking.endpage }
+        \vbox_set:Nn \@cclv
+          {
+            \@@_postscript:n
+              {
+                driver.globaldict /driver.brokenlink.rect ~ known
+                  { driver.bordertracking.continue }
+                if
+              }
+            \vbox_unpack_drop:N \@cclv
+            \@@_postscript:n
+              { driver.bordertracking.endpage }
+           }
       }
   }
 %</package>
