--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -1052,25 +1052,29 @@
 %
 % \begin{macro}{\@makecol}
 %   Hooks to allow link breaking: something will be needed in format mode
-%   at some stage.
+%   at some stage. WE can only hook in to \LaTeXe{}, so skip this if
+%   the format lacks \tn{@makecol}.
 %    \begin{macrocode}
 %<*package>
-\tl_gput_left:Nn \@makecol
+\cs_if_exist:NT \@makecol
   {
-    \box_if_empty:NF \@cclv
+    \tl_gput_left:Nn \@makecol
       {
-        \vbox_set:Nn \@cclv
+        \box_if_empty:NF \@cclv
           {
-            \@@_postscript:n
+            \vbox_set:Nn \@cclv
               {
-                driver.globaldict /driver.brokenlink.rect ~ known
-                  { driver.bordertracking.continue }
-                if
+                \@@_postscript:n
+                  {
+                    driver.globaldict /driver.brokenlink.rect ~ known
+                      { driver.bordertracking.continue }
+                    if
+                  }
+                \vbox_unpack_drop:N \@cclv
+                \@@_postscript:n
+                  { driver.bordertracking.endpage }
+               }
               }
-            \vbox_unpack_drop:N \@cclv
-            \@@_postscript:n
-              { driver.bordertracking.endpage }
-           }
       }
   }
 %</package>
