Driver should not add /Subtype /Link to user class
For goto, \pdfstartlink does add /Subtype /Link, so we
need to do the same for other drivers.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -483,7 +483,7 @@
 %   and \meta{depth} and featuring the \meta{dictionary}.
 % \end{function}
 %
-% \begin{function}[added = 2019-04-17]
+% \begin{function}[added = 2019-04-17, updated = 2019-05-03]
 %   {
 %     \driver_pdf_link_begin_goto:nnw,
 %     \driver_pdf_link_begin_user:nnw,
@@ -502,6 +502,9 @@
 %   \TeX{} \meta{content}. The |begin| and |end| functions must be given
 %   at the same box level. Depending upon the back-end in use, the
 %   \meta{content} may be placed in a hbox as part of processing.
+%   The |goto| type will automatically add |/Subtype /Link| to the PDF
+%   dictionary for the annotation produced; other classes do not add
+%   this, so the |/Subtype| must be provided as part of the \meta{action}.
 % \end{function}
 %
 % \begin{function}[EXP, added = 2019-04-09]{\driver_pdf_link_last:}
