Better naming for PDF object compression interface (fixes #571)

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -1186,12 +1186,11 @@
 % \subsubsection{Structure}
 %
 % \begin{macro}{\driver_pdf_compresslevel:n}
-% \begin{macro}{\driver_pdf_objects_enable:, \driver_pdf_objects_disable:}
+% \begin{macro}{\driver_pdf_compress_objects:n}
 %   These are all no-ops.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_compresslevel:n #1 { }
-\cs_new_protected:Npn \driver_pdf_objects_enable: { }
-\cs_new_protected:Npn \driver_pdf_objects_disable: { }
+\cs_new_protected:Npn \driver_pdf_compress_objects:n #1 { }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1459,8 +1458,8 @@
 % \subsubsection{Structure}
 %
 % \begin{macro}{\driver_pdf_compresslevel:n}
-% \begin{macro}{\driver_pdf_objects_enable:, \driver_pdf_objects_disable:}
-% \begin{macro}{\@@_pdf_objectlevel:n}
+% \begin{macro}{\driver_pdf_compress_objects:n}
+% \begin{macro}{\@@_pdf_objcompresslevel:n}
 %   Simply pass data to the engine.
 %    \begin{macrocode}
 \cs_new_protected:Npx \driver_pdf_compresslevel:n #1
@@ -1470,11 +1469,13 @@
       { \tex_pdfvariable:D compresslevel }
       \exp_not:N \int_value:w \exp_not:N \int_eval:n {#1} \scan_stop:
   }
-\cs_new_protected:Npn \driver_pdf_objects_enable:
-  { \@@_pdf_objectlevel:n { 2 } }
-\cs_new_protected:Npn \driver_pdf_objects_disable:
-  { \@@_pdf_objectlevel:n { 0 } }
-\cs_new_protected:Npx \@@_pdf_objectlevel:n #1
+\cs_new_protected:Npn \driver_pdf_compress_objects:n #1
+  {
+    \str_if_eq:nnTF {#1} { true }
+      { \@@_pdf_objcompresslevel:n { 2 } }
+      { \@@_pdf_objcompresslevel:n { 0 } }
+  }
+\cs_new_protected:Npx \@@_pdf_objcompresslevel:n #1
   {
     \cs_if_exist:NTF \tex_pdfobjcompresslevel:D
       { \tex_pdfobjcompresslevel:D }
@@ -1830,14 +1831,16 @@
 % \subsubsection{Structure}
 %
 % \begin{macro}{\driver_pdf_compresslevel:n}
-% \begin{macro}{\driver_pdf_objects_enable:, \driver_pdf_objects_disable:}
+% \begin{macro}{\driver_pdf_compress_objects:n}
 %   Pass data to the driver: these are a one-shot.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_compresslevel:n #1
   { \@@_literal:x { dvipdfmx:config~z~ \int_eval:n {#1} } }
-\cs_new_protected:Npn \driver_pdf_objects_enable: { }
-\cs_new_protected:Npn \driver_pdf_objects_disable:
-  { \@@_literal:n { dvipdfmx:config~C~0x40 } }
+\cs_new_protected:Npn \driver_pdf_compress_objects:n #1
+  {
+    \str_if_eq:nnF {#1} { true }
+      { \@@_literal:n { dvipdfmx:config~C~0x40 } }
+  }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1905,12 +1908,11 @@
 % \subsubsection{Structure}
 %
 % \begin{macro}{\driver_pdf_compresslevel:n}
-% \begin{macro}{\driver_pdf_objects_enable:, \driver_pdf_objects_disable:}
+% \begin{macro}{\driver_pdf_compress_objects:n}
 %   These are all no-ops.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_compresslevel:n #1 { }
-\cs_new_protected:Npn \driver_pdf_objects_enable: { }
-\cs_new_protected:Npn \driver_pdf_objects_disable: { }
+\cs_new_protected:Npn \driver_pdf_compress_objects:n #1 { }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
