--- a/l3kernel/l3drivers-image.dtx
+++ b/l3kernel/l3drivers-image.dtx
@@ -121,7 +121,7 @@
     \tl_clear:N \l_image_pagebox_tl
     \tl_set:Nx \l_@@_image_attr_tl
       {
-        \tl_if_empty:NF \l_image_decode_tl
+        \tl_if_empty:NF \l_image_decodearray_tl
           { :D \l_image_decodearray_tl }
         \bool_if:NT \l_image_interpolate_bool
           { :I }
@@ -132,7 +132,7 @@
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
-    \tl_clear:N \l_image_decode_tl
+    \tl_clear:N \l_image_decodearray_tl
     \bool_set_false:N \l_image_interpolate_bool
     \tl_set:Nx \l_@@_image_attr_tl
       {
@@ -162,7 +162,7 @@
         {
           attr ~
             {
-              \tl_if_empty:NF \l_image_decode_tl
+              \tl_if_empty:NF \l_image_decodearray_tl
                 { /Decode~[ \l_image_decodearray_tl ] }
               \bool_if:NT \l_image_interpolate_bool
                 { /Interpolate~true }
@@ -230,7 +230,7 @@
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
-    \tl_clear:N \l_image_decode_tl
+    \tl_clear:N \l_image_decodearray_tl
     \bool_set_false:N \l_image_interpolate_bool
     \image_extract_bb:n {#1}
   }
@@ -283,7 +283,7 @@
           { : \l_image_pagebox_tl }
         \int_compare:nNnT \l_image_page_int > 1
           { :P \int_use:N \l_image_page_int }
-        \tl_if_empty:NF \l_image_decode_tl
+        \tl_if_empty:NF \l_image_decodearray_tl
           { :D \l_image_decodearray_tl }
         \bool_if:NT \l_image_interpolate_bool
            { :I }
@@ -331,7 +331,7 @@
           { ! \tl_if_empty_p:N \l_image_decodearray_tl }
           {
             <<
-              \tl_if_empty:NF \l_image_decode_tl
+              \tl_if_empty:NF \l_image_decodearray_tl
                 { /Decode~[ \l_image_decodearray_tl ] }
               \bool_if:NT \l_image_interpolate_bool
                 { /Interpolate~true> }
@@ -380,7 +380,7 @@
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
-    \tl_clear:N \l_image_decode_tl
+    \tl_clear:N \l_image_decodearray_tl
     \bool_set_false:N \l_image_interpolate_bool
     \@@_image_getbb_auxi:nN {#1} \tex_XeTeXpdffile:D
   }
