--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -242,7 +242,7 @@
       {
         \dim_compare:nNnF \l_image_llx_dim = { 0pt }
           { \dim_const:cn { c_@@_ #1 _llx_dim } { \l_image_llx_dim } }
-        \dim_if_zero:nNnF \l_image_lly_dim = { 0pt }
+        \dim_compare:nNnF \l_image_lly_dim = { 0pt }
           { \dim_const:cn { c_@@_ #1 _lly_dim } { \l_image_lly_dim } }
         \dim_const:cn { c_@@_ #1 _urx_dim } { \l_image_urx_dim }
         \dim_const:cn { c_@@_ #1 _ury_dim } { \l_image_ury_dim }
@@ -353,7 +353,7 @@
         \ior_close:N \exp_not:N \l_@@_tmp_ior
         \dim_compare:nNnF \l_image_llx_dim = { 0pt }
           { \dim_const:cn { c_@@_ #3#4 _llx_dim } { \l_image_llx_dim } }
-        \dim_if_zero:nNnF \l_image_lly_dim = { 0pt }
+        \dim_compare:nNnF \l_image_lly_dim = { 0pt }
           { \dim_const:cn { c_@@_ #3#4 _lly_dim } { \l_image_lly_dim } }
         \dim_const:cn { c_@@_ #3#4 _urx_dim } { \l_image_urx_dim }
         \dim_const:cn { c_@@_ #3#4 _ury_dim } { \l_image_ury_dim }
