--- a/l3kernel/l3drivers-image.dtx
+++ b/l3kernel/l3drivers-image.dtx
@@ -407,7 +407,7 @@
       { \@@_image_getbb_auxiii:nNnn {#1} #2 { :P 1 } { page 1 } }
   }
 \cs_new_protected:Npn \@@_image_getbb_auxii:nnN #1#2#3
-  { \@@_image_getbb_aux:nNnn {#2} #3 { :P #1 } { page #1 } }
+  { \@@_image_getbb_auxiii:nNnn {#2} #3 { :P #1 } { page #1 } }
 \cs_generate_variant:Nn \@@_image_getbb_auxii:nnN { V }
 \cs_new_protected:Npn \@@_image_getbb_auxiii:nNnn #1#2#3#4
   {
