Correct PDF loading in XeTeX

--- a/l3kernel/l3drivers-image.dtx
+++ b/l3kernel/l3drivers-image.dtx
@@ -457,8 +457,8 @@
   {
     \tex_XeTeXpdffile:D "#1" ~
       \int_compare:nNnT \l_image_page_int > 0
-        { page~ \int_use:N \l_image_page_int }
-      \@@_image_getbb_auxiv:VnNnn \l_image_pagebox_tl
+        { page ~ \int_use:N \l_image_page_int \c_space_tl }
+        \exp_after:wN \@@_image_getbb_pagebox:w \l_image_pagebox_tl
   }
 %    \end{macrocode}
 % \end{macro}
