Make driver image functions public

--- a/l3kernel/l3drivers-image.dtx
+++ b/l3kernel/l3drivers-image.dtx
@@ -73,11 +73,11 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_image_include_eps:n}
+% \begin{macro}{\driver_image_include_eps:n}
 %  The special syntax is relatively clear here: remember we need PostScript
 %  sizes here.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_image_include_eps:n #1
+\cs_new_protected:Npn \driver_image_include_eps:n #1
   {
     \@@_literal:x
       {
@@ -195,18 +195,22 @@
 % \end{macro}
 %
 % \begin{macro}
-%   {\@@_image_include_jpg:n, \@@_image_include_pdf:n, \@@_image_include_png:n}
+%   {
+%     \driver_image_include_jpg:n,
+%     \driver_image_include_pdf:n,
+%     \driver_image_include_png:n
+%   }
 %   Images are already loaded for the measurement part of the code, so
 %   inclusion is straight-forward, with only any attributes to worry about. The
 %   latter carry through from determination of the bounding box.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_image_include_jpg:n #1
+\cs_new_protected:Npn \driver_image_include_jpg:n #1
   {
     \tex_pdfrefximage:D
       \int_use:c { c_@@_image_ #1 \l_@@_image_attr_tl _int }
   }
-\cs_new_eq:NN \@@_image_include_pdf:n \@@_image_include_jpg:n
-\cs_new_eq:NN \@@_image_include_png:n \@@_image_include_jpg:n
+\cs_new_eq:NN \driver_image_include_pdf:n \driver_image_include_jpg:n
+\cs_new_eq:NN \driver_image_include_png:n \driver_image_include_jpg:n
 %    \end{macrocode}
 % \end{macro}
 %
@@ -256,8 +260,8 @@
 %
 % \begin{macro}
 %   {
-%     \@@_image_include_eps:n, \@@_image_include_jpg:n,
-%     \@@_image_include_pdf:n, \@@_image_include_png:n
+%     \driver_image_include_eps:n, \driver_image_include_jpg:n,
+%     \driver_image_include_pdf:n, \driver_image_include_png:n
 %   }
 %  \begin{macro}{\@@_image_include_auxi:nn}
 %  \begin{macro}{\@@_image_include_auxii:nnn, \@@_image_include_auxii:xnn}
@@ -267,7 +271,7 @@
 %   the latter it is better to use the primitive route. The relevant code for
 %   that is included later in this file.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_image_include_eps:n #1
+\cs_new_protected:Npn \driver_image_include_eps:n #1
   {
     \@@_literal:x
       {
@@ -278,11 +282,11 @@
         ury = \dim_to_decimal_in_bp:n \l_image_ury_dim
       }
   }
-\cs_new_protected:Npn \@@_image_include_jpg:n #1
+\cs_new_protected:Npn \driver_image_include_jpg:n #1
   { \@@_image_include_auxi:nn {#1} { image } }
-\cs_new_eq:NN \@@_image_include_png:n \@@_image_include_jpg:n
+\cs_new_eq:NN \driver_image_include_png:n \driver_image_include_jpg:n
 %<*dvipdfmx>
-\cs_new_protected:Npn \@@_image_include_pdf:n #1
+\cs_new_protected:Npn \driver_image_include_pdf:n #1
   { \@@_image_include_auxi:nn {#1} { epdf } }
 %</dvipdfmx>
 %    \end{macrocode}
@@ -374,7 +378,11 @@
 % \subsubsection{Images}
 %
 % \begin{macro}
-%   {\@@_image_getbb_jpg:n, \@@_image_getbb_pdf:n, \@@_image_getbb_png:n}
+%   {
+%     \driver_image_getbb_jpg:n,
+%     \driver_image_getbb_pdf:n,
+%     \driver_image_getbb_png:n
+%   }
 % \begin{macro}{\@@_image_getbb_auxi:nN}
 % \begin{macro}{\@@_image_getbb_auxii:nnN, \@@_image_getbb_auxii:VnN}
 % \begin{macro}{\@@_image_getbb_auxiii:nNnn}
@@ -387,14 +395,14 @@
 %   \XeTeX{} primitive omits the text |box| from the page box specification,
 %   so there is also some \enquote{trimming} to do here.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_image_getbb_jpg:n #1
+\cs_new_protected:Npn \driver_image_getbb_jpg:n #1
   {
     \int_zero:N \l_image_page_int
     \tl_clear:N \l_image_pagebox_tl
     \@@_image_getbb_auxi:nN {#1} \tex_XeTeXpicfile:D
   }
-\cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
-\cs_new_protected:Npn \@@_image_getbb_pdf:n #1
+\cs_new_eq:NN \driver_image_getbb_png:n \driver_image_getbb_jpg:n
+\cs_new_protected:Npn \driver_image_getbb_pdf:n #1
   {
     \tl_clear:N \l_image_decodearray_tl
     \bool_set_false:N \l_image_interpolate_bool
@@ -447,14 +455,14 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\@@_image_include_pdf:n}
+% \begin{macro}{\driver_image_include_pdf:n}
 % \begin{macro}{\@@_image_include_bitmap_quote:w}
 %   For PDF images, properly supporting the |pagebox| concept in \XeTeX{}
 %   is best done using the |\tex_XeTeXpdffile:D| primitive. The syntax here
 %   is the same as for the image measurement part, although we know at this
 %   stage that there must be some valid setting for \cs{l_image_pagebox_tl}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_image_include_pdf:n #1
+\cs_new_protected:Npn \driver_image_include_pdf:n #1
   {
     \tex_XeTeXpdffile:D
       \@@_image_include_pdf_quote:w #1 "#1" \q_stop \c_space_tl
@@ -465,6 +473,7 @@
 \cs_new:Npn \@@_image_include_pdf_quote:w #1 " #2 " #3 \q_stop
   { " #2 " }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
@@ -477,15 +486,15 @@
 %<*dvisvgm>
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_image_getbb_png:n, \@@_image_getbb_jpg:n}
+% \begin{macro}{\driver_image_getbb_png:n, \driver_image_getbb_jpg:n}
 %   These can be included by extracting the bounding box data.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_image_getbb_png:n \image_extract_bb:n
-\cs_new_eq:NN \@@_image_getbb_jpg:n \image_extract_bb:n
+\cs_new_eq:NN \driver_image_getbb_png:n \image_extract_bb:n
+\cs_new_eq:NN \driver_image_getbb_jpg:n \image_extract_bb:n
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_image_include_png:n, \@@_image_include_jpg:n}
+% \begin{macro}{\driver_image_include_png:n, \driver_image_include_jpg:n}
 % \begin{macro}{\@@_image_include_bitmap_quote:w}
 %   The driver here has built-in support for basic image inclusion (see
 %   \texttt{dvisvgm.def} for a more complex approach, needed if clipping,
@@ -494,7 +503,7 @@
 %   quotes the file name, but if it is already quoted (contains spaces)
 %   then we have an issue: we simply strip off any quotes as a result.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_image_include_png:n #1
+\cs_new_protected:Npn \driver_image_include_png:n #1
   {
      \@@_literal:x
        {
@@ -504,7 +513,7 @@
          \@@_image_include_bitmap_quote:w #1 " #1 " \q_stop
        }
   }
-\cs_new_eq:NN \@@_image_include_jpg:n \@@_image_include_png:n
+\cs_new_eq:NN \driver_image_include_jpg:n \driver_image_include_png:n
 \cs_new:Npn \@@_image_include_bitmap_quote:w #1 " #2 " #3 \q_stop
   { " #2 " }
 %    \end{macrocode}
