--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -463,6 +463,58 @@
 %   given.
 % \end{function}
 %
+% \section{Image inclusion}
+%
+% Image inclusion support is closely tied to the higher-level \pkg{l3image}
+% module. This arises as information concerning images (\emph{e.g.}~page
+% numbers in multi-page files) is needed to correct cache image data. As
+% such, the driver code here assumes the following are defined
+% \begin{itemize}
+%   \item \cs{l_image_decodearray_tl}
+%   \item \cs{l_image_interpolate_tl}
+%   \item \cs{l_image_page_tl}
+%   \item \cs{l_image_pagebox_tl}
+% \end{itemize}
+%
+% Note also that the functions defined will depend on the file types supported
+% by the driver. As such, a calling function should typically test for the
+% existence of an appropriate function to determine if the image file is
+% supported.
+%
+% \begin{function}[added = 2019-05-07]
+%   {
+%     \driver_image_getbb_eps:n,
+%     \driver_image_getbb_jpg:n,
+%     \driver_image_getbb_pdf:n,
+%     \driver_image_getbb_png:n
+%   }
+%   \begin{syntax}
+%     \cs{driver_image_getbb_pdf:n} \Arg{file}
+%   \end{syntax}
+%   These functions load the requested image \meta{file} and obtain the
+%   bounding box information on the file. They may also cache the image for
+%   subsequent inclusion: this is driver-dependent. The bounding box data
+%   will be stored in \cs{l_image_llx_dim},  \cs{l_image_lly_dim},
+%   \cs{l_image_urx_dim}, and  \cs{l_image_ury_dim} after use of these
+%   functions.
+% \end{function}
+%
+% \begin{function}[added = 2019-05-07]
+%   {
+%     \driver_image_include_eps:n,
+%     \driver_image_include_jpg:n,
+%     \driver_image_include_pdf:n,
+%     \driver_image_include_png:n
+%   }
+%   \begin{syntax}
+%     \cs{driver_image_include_pdf:n} \Arg{file}
+%   \end{syntax}
+%   These functions include the appropriate image type at the current position.
+%   They should be preceded by use of the matching \texttt{getbb} function to
+%   set the bounding box correctly; in some drivers, the \texttt{getbb}
+%   function is also responsible for caching the image for later inclusion.
+% \end{function}
+%
 % \section{PDF Features}
 %
 % A range of PDF features are exposed by \pdfTeX{} and \LuaTeX{} in direct PDF
